# impeller-cmake-example

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  deps.sh  imgui.cmake  main.cc
.github/workflows/: build.yml
assets_src/: flutter_logo.fbx
src/: assets.cc  assets.h  main.cc  main_gles.cc
src/examples/: CMakeLists.txt  assets.cc  assets.h  clock.cc  clock.h  example_base.cc  example_base.h  mesh_example.cc  mesh_example.frag  mesh_example.h  mesh_example.vert  the_impeller_example.cc  the_impeller_example.h
src/examples/mesh/: mesh_example.cc  mesh_example.frag  mesh_example.h  mesh_example.vert
src/examples/the_impeller/: the_impeller_example.cc  the_impeller_example.h
src/importer/: CMakeLists.txt  importer_main.cc  mesh.fbs
toolchains/: mac-x64-toolchain.cmake
